--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -56,7 +56,8 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>&copy; 2015 <a href="http://www.bzlab.org">Bzlab</a>, brother to brother brogramming
+</p>
       </div>
     </div>
 
