--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,7 +35,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">frontend</a>
+            <a class="navbar-brand" href="#/">My Todo</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
